--- a/C++/TODO
+++ b/C++/TODO
@@ -1,1 +1,3 @@
-guard terminal (discharged) state when delete obj from repository
+1. guard terminal (discharged) state when delete obj from repository
+
+2. NoexceptMoveableAxis
